# alpr-multimodal

./: README.md  alpr_multimodal.ipynb  pyproject.toml
