[tool.poetry]
name = "alpr-multimodal"
version = "0.1.0"
description = ""
authors = ["danielsyahputra <dnlshp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.3.4"
ipywidgets = "^8.1.5"
pydantic = "^2.10.6"
openai = "^1.60.2"
langchain-openai = "^0.3.2"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
langchain-deepseek = "^0.0.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
